# explain

./: .gitignore  Cargo.toml  LICENSE  VERIFICATION.txt  readme.md
.github/workflows/: explain.yml
choco/: .nuspec  LICENSE  VERIFICATION.txt  explain.0.1.0.nupkg  explain.0.1.2.nupkg  explain.0.1.3.nupkg  explain.0.1.4.nupkg
src/: helpers.rs  main.rs
tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
