[package]
name = "explain"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1"
prettytable-rs = "0.10"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
humansize = "2"


